# flask-demo

./: .replit  app.py  login.css  pyproject.toml
templates/: encryption.html  home.html  login.html  signin.html
